55 implemented marking of time entries
